--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no"
     />
-    <title>Tauri + SvelteKit App</title>
+    <title>VitAp Pal</title>
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
